Added a PKGBUILD file for making a pacman package for Arch, based on an updated CMake setup. The CMake setup encorces out-of-source builds and should thus be compatible with the already present Makefile.

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,13 @@ build/bin/cunit_test
 build/obj/*.o
 build/lib/*.a
 build/lib/*.so*
+CMakeFiles/
+neurowm
+CMakeCache.txt
+GPATH
+GRTAGS
+GTAGS
+cmake_install.cmake
+pkgbuild/*
+src/neuro/libneuro.a
+build/
