--- a/pkgbuild/cmake/PKGBUILD
+++ b/pkgbuild/cmake/PKGBUILD
@@ -6,37 +6,38 @@
 #
 
 pkgname=neurowm-git
-pkgver=v0.35.r14.gbe569ba
+pkgver=v0.35.r16.g377ef2c
 pkgrel=1
-pkgdesc="neurowm is a tiling window manager written in C"
+pkgdesc="Extremely configurable, fast, dynamic tiling window manager for the X Window System written in C language"
 arch=('i686' 'x86_64')
 url="https://github.com/nnoell/neurowm"
 license=('custom:BSD3-style')
 depends=('libx11')
 makedepends=('cmake' 'gcc' 'git')
-optdepends=('libxrandr' 'dzen2' 'gmrun' 'xdotool' 'rofi')
+optdepends=('libxrandr' 'dzen2' 'gmrun' 'xdotool')
 checkdepends=('bcunit')
 provides=('neurowm')
 conflicts=('neurowm')
 replaces=('neurowm')
-source=("neurowm::git+https://github.com/simpers/neurowm#branch=arch")
+source=("neurowm::git+https://github.com/nnoell/neurowm")
 md5sums=('SKIP')
 
 pkgver() {
-  cd "$srcdir/$pkgname"
+  cd "$srcdir/neurowm"
   git describe --long | sed 's/\([^-]*-g\)/r\1/;s/-/./g'
 }
 
 build() {
-  echo "Going to $srcdir/$pkgname"
+  echo "Going to $srcdir/neurowm"
   cd "$srcdir/neurowm"
-  mkdir -p "build" && cd "build"  
+  mkdir -p "build"
+  cd "build"
   cmake ..
   make
 }
 
 package() {
-  cd "$srcdir/$pkgname"
+  cd "$srcdir/neurowm"
   install -Dm644 LICENSE "$pkgdir/usr/share/licenses/$pkgname/LICENSE"
   if [ ! -f "pkgbuild/neurowm.desktop" ]; then
       echo 'Missing the xsession file (pkgbuild/neurowm.desktop)'
